[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beliefos"
version = "0.1.0"
description = "A cognitive runtime that maintains evolving beliefs over time from observations."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "BeliefOS Contributors" }]
keywords = ["belief", "cognitive", "runtime", "fusion", "decision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "redis>=5.0",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
    "anyio>=4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
llm = [
    "openai>=1.30",
    "anthropic>=0.30",
]
ros = ["rclpy>=3.0"]

[project.urls]
Homepage = "https://github.com/beliefos/beliefos"
Documentation = "https://github.com/beliefos/beliefos#readme"
Issues = "https://github.com/beliefos/beliefos/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["beliefos*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q --strict-markers"
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require PostgreSQL/Redis (deselect with -m 'not integration')",
    "llm: marks tests that require external LLM providers",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.coverage.run]
source = ["beliefos"]
omit = ["beliefos/dashboard/*", "beliefos/integrations/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:", "raise NotImplementedError"]
